--- a/client/src/app/+projects/card.scss
+++ b/client/src/app/+projects/card.scss
@@ -1,10 +1,42 @@
 @import "../../css/scss/partials/functions";
 
+.content {
+  padding: 0;
+}
+
+.wrapper {
+  overflow: initial;
+}
+
+.card-wrapper {
+  card:not(:last-child) {
+    margin-right: 15%;
+  }
+}
+
 card {
+  display: inline-block;
+  position: relative;
+  padding-top: 10%;
+  width: 23%;
+  min-height: 500px;
+
   .card {
+    position: absolute;
+    height: 100%;
+    width: 100%;
     @include materialBounce();
 
+    box-shadow: 0px 2px 2px rgba(0,0,0,0.2),
+      0px 2px 2px rgba(0,0,0,0.2),
+      0px 4px 4px rgba(0,0,0,0.2),
+      0px 8px 8px rgba(0,0,0,0.2),
+      0px 16px 16px rgba(0,0,0,0.2),
+      0px 32px 32px rgba(0,0,0,0.2),
+      0px 64px 64px rgba(0,0,0,0.2);
+
     &.open {
+      z-index: 100;
       background: transparent;
       box-shadow: 0px 0px 0px rgba(0,0,0,0);
     }
