--- a/client/src/app/+projects/projects.html
+++ b/client/src/app/+projects/projects.html
@@ -1,36 +1,33 @@
 <div class="container">
-  <header class="codrops-header">
-    <div class="codrops-links">
-      <a class="codrops-icon codrops-icon--prev" href="http://tympanus.net/Development/ColorExtraction/" title="Previous Demo"><span>Previous Demo</span></a>
-      <a class="codrops-icon codrops-icon--drop" href="http://tympanus.net/codrops/?p=24222" title="Back to the article"><span>Back to the Codrops article</span></a>
-    </div>
-    <h1>Card Expansion Effect with SVG clipPath <span>Polygonal clip, reversed pattern with fill and background image.</span></h1>
-    <nav class="codrops-demos">
-      <a href="index.html">Demo 1</a>
-      <a href="index2.html">Demo 2</a>
-      <a href="index3.html">Demo 3</a>
-      <a class="current-demo" href="index4.html">Demo 4</a>
-    </nav>
-  </header>
   <div class="content">
     <!-- trianglify pattern container -->
     <div class="pattern pattern--hidden"></div>
+
     <!-- cards -->
-    <div class="wrapper">
-      <card></card>
+    <div class="wrapper" fill-height>
+      <div class="card-wrapper">
+        <card></card>
+        <card></card>
+        <card></card>
+      </div>
+
+      <div class="name-plate-spacer"></div>
+
+      <div class="row">
+        <div class="col s12 center-align">
+          <h3 class="name-plate condensed-header">Mathew Kleppin</h3>
+        </div>
+      </div>
+
+      <div class="row center-align">
+        <div class="col s3 offset-s3">
+          <a href="https://github.com/hellsan631/">Github</a>
+        </div>
+        <div class="col s3">
+          <a href="https://www.linkedin.com/in/mathew-kleppin-b1432664">LinkedIn</a>
+        </div>
+      </div>
     </div>
     <!-- /cards -->
   </div>
-  <!-- Related demos -->
-  <section class="content content--related">
-    <p>If you enjoyed this demo you might also like:</p>
-    <a class="media-item" href="http://tympanus.net/Development/AnimatedGridLayout/">
-      <img class="media-item__img" src="img/related/GridItemAnimation.jpg">
-      <h3 class="media-item__title">Grid Item Animation Layout</h3>
-    </a>
-    <a class="media-item" href="http://tympanus.net/Tutorials/ThumbnailGridExpandingPreview/">
-      <img class="media-item__img" src="img/related/ThumbnailGridExpandingPreview.jpg">
-      <h3 class="media-item__title">Thumbnail Grid with Expanding Preview</h3>
-    </a>
-  </section>
 </div>
