--- a/client/src/css/scss/projects.scss
+++ b/client/src/css/scss/projects.scss
@@ -1,4 +1,4 @@
-@import "../../css/scss/partials/functions";
+@import "partials/functions";
 
 .name-plate {
   display:inline-block;
@@ -11,5 +11,5 @@
 
 .name-plate-spacer {
   display: block;
-  padding: 6em;
+  padding: 0em;
 }
