--- a/client/src/css/scss/card.scss
+++ b/client/src/css/scss/card.scss
@@ -8,6 +8,56 @@
   }
 }
 
+.mk {
+  .open {
+    .card__content {
+      padding: 20px 30px 12px;
+
+      @media #{$small-and-down} {
+        padding: 6px 6px 6px;
+      }
+
+      box-shadow: 0px 2px 2px rgba(0,0,0,0.1),
+        0px 2px 2px rgba(0,0,0,0.1),
+        0px 4px 4px rgba(0,0,0,0.1),
+        0px 8px 8px rgba(0,0,0,0.1),
+        0px 16px 16px rgba(0,0,0,0.1),
+        0px 32px 32px rgba(0,0,0,0.1),
+        0px 64px 64px rgba(0,0,0,0.1);
+    }
+
+    .card__caption, .card__copy, {
+      max-width: none;
+      width: 100%;
+    }
+
+    .card__content  {
+      width: 87%;
+      max-width: 1280px;
+
+      @media #{$small-and-down} {
+        width: 100%;
+      }
+
+      @media #{$medium-and-up} {
+        width: 92%;
+      }
+
+      @media #{$large-and-up} {
+        width: 85%;
+      }
+
+      @media #{$extra-large-and-up} {
+        width: 80%;
+      }
+    }
+  }
+
+  .meta__author {
+    padding-left: 0;
+  }
+}
+
 .card-wrapper {
   padding-top: 5em;
 
