--- a/client/src/css/scss/styles.scss
+++ b/client/src/css/scss/styles.scss
@@ -22,6 +22,28 @@ h1,h2,h3,h4,h5,h6 {
   max-width: 100%;
 }
 
+.noise {
+  position: fixed;
+  top:0;
+  left:0;
+  bottom:0;
+  right:0;
+  width: 100%;
+  height: 100%;
+  background: url('../img/noise.png');
+  z-index: 1;
+}
+
+.credits {
+  position: relative;
+  z-index: 2;
+}
+
+.card-wrapper {
+  position: relative;
+  z-index: 3;
+}
+
 a {
   cursor: pointer;
   -webkit-tap-highlight-color: transparent;
