--- a/client/src/css/scss/card.scss
+++ b/client/src/css/scss/card.scss
@@ -113,16 +113,10 @@
 
     @include materialBounce();
 
-    box-shadow: 0px 2px 2px rgba(0,0,0,0.2),
-      0px 2px 2px rgba(0,0,0,0.2),
-      0px 4px 4px rgba(0,0,0,0.2),
-      0px 8px 8px rgba(0,0,0,0.2),
-      0px 16px 16px rgba(0,0,0,0.2),
-      0px 32px 32px rgba(0,0,0,0.2),
-      0px 64px 64px rgba(0,0,0,0.2);
+    box-shadow: 0 1em 8em rgba(black, 0.22);
 
     &.open {
-      box-shadow: 0px 0px 0px rgba(0,0,0,0);
+      box-shadow: 0 1em 8em rgba(black, 0.05);
     }
   }
 }
