add marigold glow to cards on hover

--- a/client/src/css/scss/card.scss
+++ b/client/src/css/scss/card.scss
@@ -118,7 +118,7 @@
     overflow: hidden;
 
     &:hover {
-      box-shadow: 0 1em 8em rgba(black, 0.55);
+      box-shadow: 0 1em 8em rgba(#Bd8025, 0.65);
     }
 
     &.open {
